--- a/index.html
+++ b/index.html
@@ -8,7 +8,41 @@
   </head>
   <body>
     <main id="main">
+      <form id="recipe-form" >
+
+      </form>
     </main>
+
+
+
+    <script id="recipe-template" type="text/x-handlebars-template">
+      <p>{{name}}</p>
+      <a href="#" onclick="displayEditForm();return false;">Edit Recipe</a>
+      {{> recipeDetailsPartial }}
+    </script>
+
+    <script id="recipe-form-template" type="text/x-handlebars-template" onsubmit="createRecipe();return false;">
+        Name: <input type="text" id="name"><br>
+        Description: <input type="text" id="description"><br>
+        Ingredients: <input type="text" name="ingredients"><br>
+        <input type="text" name="ingredients"><br>
+        <input type="text" name="ingredients"><br>
+        <input type="text" name="ingredients"><br>
+        <input type="text" name="ingredients"><br>
+        <input type="submit">
+    </script>
+
+      <script id="recipe-details-partial" type="text/x-handlebars-template" >
+      <div id="recipe">
+        <p>{{description}}</p>
+        <ul>
+          {{#each ingredients }}
+            {{#displayIngredient}}{{/displayIngredient}}
+          {{/each}}
+        <ul>
+      </div>
+    </script>
+
     <script src="node_modules/handlebars/dist/handlebars.min.js"></script>
     <script src="index.js"></script>
     <!-- Open this file and call `mocha.run()` in console to run tests -->
